# ML-NN-IMPLEMENTATION

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
LA/: LinearAlgebra.cpp  LinearAlgebra.hpp  LinearAlgebraFortran.f90  Makefile  erro.txt  teste.f90
LA/include/: LinearAlgebra.hpp
LA/src/: matrix.cpp  oldermatrix.cpp
ML/include/: ml.hpp
ML/src/: LinearRegression.cpp
test/LinearAlgebra/: Makefile  latest  latest.cpp
test/LinearAlgebra/MatrixTest/: Makefile  latest  latest.cpp
